# wridian

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/knowledge-health/references/: directory-compliance.md  folder-structure.md  frontmatter-healthcheck-notes.md  healthcheck-2026-05-23.md  skill-evolution-policy.md  structure-governance-2026-05-23.md
src-tauri/resources/knowledge-health/scripts/: check_knowledge_health_resources.py  health_check_knowledge_base.py  init_knowledge_base.py
src-tauri/resources/skills/author-distill/: SKILL.md
src-tauri/resources/skills/knowledge-card/: SKILL.md
src-tauri/resources/skills/work-decompose/: SKILL.md
src-tauri/resources/skills/zhishiku-skill/: SKILL.md
src-tauri/resources/skills/zhishiku-skill/references/: ai-short-drama-script-usage.md  call-log-template.md  fire-rescue-technical-notes.md  folder-structure.md  healthcheck-2026-05-23.md  routing.md  skill-evolution-policy.md  skill-install-policy.md  source-normalization.md  structure-governance-2026-05-23.md
src-tauri/resources/skills/zhishiku-skill/scripts/: health_check_knowledge_base.py  (+4 more)
src-tauri/src/: atomic_write.rs  bridge.rs  chat_persistence.rs  cocreation.rs  creative_skills.rs  docx_xml.rs  e2e.rs  file_lock.rs  knowledge_graph.rs  knowledge_ops.rs  lib.rs  main.rs  memory.rs  metadata_index.rs  model_accounts.rs  opener.rs  path_safety.rs  projects.rs  rule_router.rs  runtime.rs  text_index.rs  workspace.rs
(+208 files in other folders)
