[package]
name = "wridian"
version = "0.0.7"
description = "A local-first writing memory desktop app"
authors = ["Wridian"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wridian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
keyring-core = "1.0.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros", "time"] }
windows-native-keyring-store = { version = "1.1.0", default-features = false }
base64 = "0.22"
rand = "0.9"
sha2 = "0.10"
urlencoding = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
